// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cvbbAY exzMhj"
  >
    <table
      className="sc-jWBwVP biTtIc"
    >
      <tbody
        className="sc-cMljjf eTbdzc"
      >
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            US
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            PL
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Warsaw
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            DE
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Berlin
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            FR
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Paris
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            ES
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Madird
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            —
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cvbbAY exzMhj"
  >
    <table
      className="sc-jWBwVP biTtIc"
    >
      <thead
        className="sc-brqgnP SqPLV"
      >
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <th
            className="sc-gPEVay bIcZTr"
          >
            Code
          </th>
          <th
            className="sc-gPEVay bIcZTr"
          >
            Capital
          </th>
          <th
            className="sc-gPEVay bIcZTr"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cMljjf eTbdzc"
      >
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            US
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            PL
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Warsaw
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            DE
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Berlin
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            FR
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Paris
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            ES
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Madird
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-jDwBTQ SCRCq"
          >
            —
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-cvbbAY exzMhj"
  >
    <table
      className="sc-jWBwVP biTtIc"
    >
      <thead
        className="sc-brqgnP SqPLV"
      >
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <th
            className="sc-gPEVay bIcZTr"
          >
            #
          </th>
          <th
            className="sc-gPEVay bIcZTr"
          >
            Code
          </th>
          <th
            className="sc-gPEVay bIcZTr"
          >
            Capital
          </th>
          <th
            className="sc-gPEVay bIcZTr"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cMljjf eTbdzc"
      >
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            1
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            US
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            2
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            PL
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Warsaw
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            3
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            DE
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Berlin
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            4
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            FR
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Paris
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            5
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            ES
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Madird
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jAaTju cFpcTk"
        >
          <td
            className="sc-iRbamj hHagiV"
          >
            6
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            —
          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-jDwBTQ SCRCq"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
